test/compile-errors/extern-warnings.crow
f void() noctx, c extern

f void() unsafe, c extern
